RESOLVED FIXED231089
REGRESSION(r283047): PerformanceTests/Layout/line-layout-simple.html regressed by ~10%
https://bugs.webkit.org/show_bug.cgi?id=231089
Summary REGRESSION(r283047): PerformanceTests/Layout/line-layout-simple.html regresse...
alan
Reported 2021-10-01 11:22:10 PDT
due to the enlarged size of ContinuousContent::Run
Attachments
Patch (15.19 KB, patch)
2021-10-01 11:25 PDT, alan
no flags
alan
Comment 1 2021-10-01 11:25:37 PDT
EWS
Comment 2 2021-10-01 13:21:06 PDT
Committed r283392 (242396@main): <https://commits.webkit.org/242396@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439881 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-01 13:22:20 PDT
Note You need to log in before you can comment on or make changes to this bug.