REGRESSION(r283047): PerformanceTests/Layout/line-layout-simple.html regressed by ~10% https://bugs.webkit.org/show_bug.cgi?id=231089

Reviewed by Antti Koivisto.

Let's just hold on to the applicable RenderStyle instead of constructing a dedicated Style structure.
Note that the expected style for line breaking is not necessarily the style of the inline item (e.g. in case of an atomic inline box, it's the parent inline box's style).

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::isWrappingAllowed):
(WebCore::Layout::InlineContentBreaker::shouldKeepEndOfLineWhitespace const):
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):
(WebCore::Layout::InlineContentBreaker::wordBreakBehavior const):
(WebCore::Layout::InlineContentBreaker::tryBreakingTextRun const):
* layout/formattingContexts/inline/InlineContentBreaker.h:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::Run::Run):
(WebCore::Layout::logicalWidth): Deleted.


Canonical link: https://commits.webkit.org/242396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283392 268f45cc-cd09-0410-ab3c-d52691b4dbfc